--- a/quasar-frontend/TODO
+++ b/quasar-frontend/TODO
@@ -1,10 +1,6 @@
 Admin section:
     ✔ online resources admin @done(25-08-24 07:52)
-    publications admin:
-        ✔ add search/sort functionality @done(25-08-24 22:58)
-        ✔ handle edit/delete functionality @done(25-08-25 07:55)
-        ✔ add "new" functionality @done(25-08-25 07:55)
-        ✔ add ability to create a new publication type in PubForm @done(25-08-27 09:45)
+    ☐ manage existing publication types
     ☐ reviews admin
     ☐ socials admin
     ☐ users admin
