--- a/quasar-frontend/TODO
+++ b/quasar-frontend/TODO
@@ -1,6 +1,6 @@
 Admin section:
     ✔ online resources admin @done(25-08-24 07:52)
-    ☐ manage existing publication types
+    ✔ manage existing publication types @done(25-08-27 12:31)
     ☐ reviews admin
     ☐ socials admin
     ☐ users admin
