--- a/quasar-frontend/TODO
+++ b/quasar-frontend/TODO
@@ -1,7 +1,10 @@
 Admin section:
     ✔ online resources admin @done(25-08-24 07:52)
     ✔ manage existing publication types @done(25-08-27 12:31)
-    ☐ reviews admin
+    reviews admin:
+        ☐ add review
+        ☐ delete review
+        ☐ reorder reviews
     ☐ socials admin
     ☐ users admin
     ☐ import csv
