--- a/quasar-frontend/TODO
+++ b/quasar-frontend/TODO
@@ -1,11 +1,11 @@
 Admin section:
     ✔ online resources admin @done(25-08-24 07:52)
     ✔ manage existing publication types @done(25-08-27 12:31)
-    reviews admin:
-        ☐ add review
-        ☐ delete review
-        ☐ reorder reviews
-    ☐ socials admin
+    ✔ reviews admin: @done(25-08-29 00:22)
+        ✔ add review @done(25-08-29 00:22)
+        ✔ delete review @done(25-08-29 00:22)
+        ✔ reorder reviews @done(25-08-29 00:22)
+    ✔ socials admin @done(25-08-29 11:20)
     ☐ users admin
     ☐ import csv
 
