Add scheduling for broken links & updated TODOs

--- a/quasar-frontend/TODO
+++ b/quasar-frontend/TODO
@@ -6,6 +6,7 @@ Admin section:
         ✔ delete review @done(25-08-29 00:22)
         ✔ reorder reviews @done(25-08-29 00:22)
     ✔ socials admin @done(25-08-29 11:20)
+    ☐ broken links admin
     ☐ users admin
     ☐ import csv
 
