--- a/quasar-frontend/TODO
+++ b/quasar-frontend/TODO
@@ -6,7 +6,8 @@ Admin section:
         ✔ delete review @done(25-08-29 00:22)
         ✔ reorder reviews @done(25-08-29 00:22)
     ✔ socials admin @done(25-08-29 11:20)
-    ☐ broken links admin
+    broken links admin:
+        ☐ need the ability to edit link url
     ☐ users admin
     ☐ import csv
 
